# src/Controller/Receita/CriaReceitaController.php
@@ -2,20 +2,22 @@
 
 namespace App\Controller\Receita;
 
-use App\Entity\FormEntradaDados;
 use Throwable;
+use App\Helper\Metodo;
+use App\Entity\Receita;
+use App\Entity\FormEntradaDados;
 use App\Services\Receita\ReceitaServices;
 use Symfony\Component\HttpFoundation\Request;
 use Symfony\Component\HttpFoundation\Response;
 use Symfony\Component\Routing\Annotation\Route;
 use Symfony\Component\HttpFoundation\JsonResponse;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
+use Symfony\Flex\Recipe;
 
 class CriaReceitaController extends AbstractController
 {
-    private  const   metodo = 'POST';
 
-    #[Route('/receitas', name: 'app_receitas', methods: [self::metodo])]
+    #[Route('/receitas', name: 'app_receitas', methods: [Metodo::post])]
     public function cria(
         Request $request,
         ReceitaServices $receitaServices
@@ -23,7 +25,8 @@ class CriaReceitaController extends AbstractController
     ): Response {
         try {
             $form = new FormEntradaDados();
-            $form->tipo = self::metodo;
+            $form->tipo = Metodo::post;
+            $form->entidade = new Receita();
             $form->jsonDados = $request->getContent();
             $receitaServices->load($form);
             $receitaServices->save();
